--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.7.2
 cloudinary==1.39.0
+crispy-bootstrap5 @ git+https://github.com/django-crispy-forms/crispy-bootstrap5.git@1b218092f133a4d1bfc46b62febc2606e2faebfe
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==4.2.11
+django-crispy-forms==2.1
 django-summernote==0.8.20.0
 gunicorn==20.1.0
 psycopg==3.1.18
